# aegnt-27

./: .gitignore  BINARY-DISTRIBUTION.md  Cargo.toml  DEPLOYMENT_READY.md  DEVELOPMENT_JOURNAL.md  Makefile  SECURITY.md  build-proprietary.rs  build.rs  dailydoco-capture-demo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/guides/: best_practices.md  configuration.md
examples/: basic_integration.rs  detection_validation.rs
proprietary-engines/: aegnt27_commercial_manifest.json
scripts/: build-binaries.sh  build-commercial.sh  package-release.sh
src/: audio.rs  authenticity.rs  config.rs  detection.rs  error.rs  lib.rs  mouse.rs  persistence.rs  typing.rs  utils.rs  visual.rs
